# clallocator

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: BoostComputeConfig.cmake
include/cla/: clallocator.h
test/: CMakeLists.txt  test_basic.cpp
